--- a/.github/workflows/validate_submission_split.yml
+++ b/.github/workflows/validate_submission_split.yml
@@ -79,7 +79,7 @@ jobs:
           - name: checkout python tools repo
             uses: actions/checkout@v3
             with:
-              repository: 'Testing-Forecast-Actions/hub-tools'
+              repository: 'Testing-Forecast-Actions/Testing-Tools'
               ref: 'main'
               path: './tools/'
         
@@ -99,13 +99,16 @@ jobs:
               files: ${{ steps.get_changed_files.outputs.all_changed_files }}
               PR_NUMBER: ${{ github.event.number }}
             run: |
-              library("hubValidations")
-              v <- hubValidations::validate_pr(
-                  gh_repo = Sys.getenv("GITHUB_REPOSITORY"),
-                  pr_number = Sys.getenv("PR_NUMBER"),
-                  skip_submit_window_check = FALSE
-              )
-              hubValidations::check_for_errors(v, verbose = TRUE)
+              validate_parquet_chunks.R   --input TestTeam-TestModel/2025_2026_1_RSV-TestTeam-TestModel.parquet   
+              --hub ./   --split location   --out chunks/   --log validation_errors.log2
+
+              #library("hubValidations")
+              # v <- hubValidations::validate_pr(
+              #     gh_repo = Sys.getenv("GITHUB_REPOSITORY"),
+              #     pr_number = Sys.getenv("PR_NUMBER"),
+              #     skip_submit_window_check = FALSE
+              # )
+              #hubValidations::check_for_errors(v, verbose = TRUE)
                                     
             shell: Rscript {0}
 
