--- a/.github/workflows/test_split_validation.yml
+++ b/.github/workflows/test_split_validation.yml
@@ -82,7 +82,7 @@ jobs:
             uses: actions/checkout@v3
             with:
               ref: 'main'
-              path: './repo/'
+              # path: './repo/'
 
           # Get changes from pull request for later use
           # --------------------------------------------      
@@ -116,7 +116,7 @@ jobs:
               # files: ${{ steps.get_changed_files.outputs.all_changed_files }}
               # PR_NUMBER: ${{ github.event.number }}
             run: |
-              Rscript ./tools/RCode/validate_parquet_chunks.R   --input "TestTeam-TestModel/2025_2026_1_RSV-TestTeam-TestModel.parquet" --hub "./repo"   --split "location"   --out "chunks/"   --log "validation_errors.log2"
+              Rscript ./tools/RCode/validate_parquet_chunks.R   --input "TestTeam-TestModel/2025_2026_1_RSV-TestTeam-TestModel.parquet" --hub "./"   --split "location"   --out "chunks/"   --log "validation_errors.log2"
 
               #library("hubValidations")
               # v <- hubValidations::validate_pr(
