--- a/.github/workflows/validate_submission_split.yml
+++ b/.github/workflows/validate_submission_split.yml
@@ -38,7 +38,10 @@ jobs:
           # ----------------------------------------------
           - uses: r-lib/actions/setup-r-dependencies@v2
             with:
-              packages: hubverse-org/hubValidations, any::sessioninfo
+              packages: |
+                hubverse-org/hubValidations
+                optparse
+                any::sessioninfo
 
 
           # Install System dependencies
