--- a/.github/workflows/validate_submission_split.yml
+++ b/.github/workflows/validate_submission_split.yml
@@ -40,7 +40,10 @@ jobs:
             with:
               packages: |
                 hubverse-org/hubValidations
+                arrow
+                dplyr
                 optparse
+                purrr
                 any::sessioninfo
 
 
