--- a/.github/workflows/validate_submission_split.yml
+++ b/.github/workflows/validate_submission_split.yml
@@ -78,6 +78,8 @@ jobs:
           - name: Get changes
             id: get_changed_files
             uses: tj-actions/changed-files@v46
+            with:
+              separator: ","
 
 
           # Checkout the python tools repo
